# Generated by configure.  Do no edit.

2010-10-26  Patrick Ohly  <patrick.ohly@intel.com>

	* NEWS:
	* configure-pre.in:

	NEWS, configure: SyncEvolution 1.1

2010-10-26  Patrick Ohly  <patrick.ohly@intel.com>

	* test/sys.supp:

	nightly testing: ignore valgrind report in libsynthesis

2010-10-26  Patrick Ohly  <patrick.ohly@intel.com>

	* test/evo.supp:

	nightly testing: relaxed leak checking for ecal/ebook (BMC #1007)

2010-10-26  Patrick Ohly  <patrick.ohly@intel.com>

	* src/backends/kcalextended/KCalExtendedSource.cpp:

	KCalExtended: workaround for importing custom time zones

2010-10-26  Patrick Ohly  <patrick.ohly@intel.com>

	* src/backends/kcalextended/KCalExtendedSource.cpp:

	KCalExtended: avoid partial loading to work around issues with it

2010-10-26  Patrick Ohly  <patrick.ohly@intel.com>

	* src/backends/kcalextended/KCalExtendedSource.cpp:

	KCalExtended: ignore request to remove non-existant event

2010-10-26  Patrick Ohly  <patrick.ohly@intel.com>

	* src/backends/kcalextended/KCalExtendedSourceRegister.cpp:

	KCalExtended: disable unsupported linked item tests

2010-10-26  Patrick Ohly  <patrick.ohly@intel.com>

	* src/syncevo/SyncSource.h:
	* test/ClientTest.cpp:

	client-test: replaced compile-time LINKED_ITEMS_RELAXED_SEMANTIC
	with ClientTestConfig::linkedItemsRelaxedSemantic

2010-10-26  Patrick Ohly  <patrick.ohly@intel.com>

	* README.rst:
	* src/syncevo/Cmdline.cpp:
	* src/syncevo/readme2c.pl:

	command line: --delete-items ... * deletes all items

2010-10-20  Patrick Ohly  <patrick.ohly@intel.com>

	* src/syncevo-dbus-server.cpp:

	syncevo-dbus-server: incorrect Presence status after config
	change (BMC #8453)

2010-10-19  Patrick Ohly  <patrick.ohly@intel.com>

	* src/syncevo/SmartPtr.h:
	* src/syncevo/SoupTransportAgent.cpp:

	fixed compiler warnings

2010-10-19  Patrick Ohly  <patrick.ohly@intel.com>

	* src/backends/kcalextended/KCalExtendedSourceRegister.cpp:

	KCalExtended: updated mkcal backend description
