@@ -7,8 +7,8 @@ synchronize personal information management data
 ------------------------------------------------
 
 :Manual section: 1
-:Version: 1.1
-:Date: 2010-10-26
+:Version: 1.1+20101101+SE+8e5f8df+SYSYNC+2a247a4
+:Date: 2010-11-01
 
 SYNOPSIS
 ========
