@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="generator" content="Docutils 0.6: http://docutils.sourceforge.net/" />
 <title>SyncEvolution</title>
-<meta name="date" content="2010-10-26" />
+<meta name="date" content="2010-11-01" />
 <style type="text/css">
 
 /*
@@ -315,9 +315,9 @@ ul.auto-toc {
 <tr class="field"><th class="docinfo-name">Manual section:</th><td class="field-body">1</td>
 </tr>
 <tr><th class="docinfo-name">Version:</th>
-<td>1.1</td></tr>
+<td>1.1+20101101+SE+8e5f8df+SYSYNC+2a247a4</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2010-10-26</td></tr>
+<td>2010-11-01</td></tr>
 </tbody>
 </table>
 <div class="section" id="synopsis">
