@@ -1,5 +1,15 @@
 # Generated by configure.  Do no edit.
 
+2010-11-01  Patrick Ohly  <patrick.ohly@intel.com>
+
+	* src/syncevo/FileConfigTree.cpp:
+	* src/syncevo/FileConfigTree.h:
+	* src/syncevo/SyncConfig.cpp:
+	* src/syncevo/SyncConfig.h:
+	* src/syncevo/VolatileConfigTree.h:
+
+	config handling: old-style configs not found anymore (BMC #9381)
+
 2010-10-26  Patrick Ohly  <patrick.ohly@intel.com>
 
 	* NEWS:
